--- a/bermain-mahjong-di-kecoaslot-pasti-dapat-kesempatan-emas.html
+++ b/bermain-mahjong-di-kecoaslot-pasti-dapat-kesempatan-emas.html
@@ -1383,8 +1383,8 @@ body {
                     <img width='1280' height='720' layout='responsive' class="pdp-mod-common-image gallery-preview-panel__image" alt="Kecoaslot" src="https://i.postimg.cc/JhPwS7MY/ba6f52c62acff26ae33927aaf8e843a7.jpg" />
                   </div>
                   <div class="btn-gacor">
-                    <a href=""https://jali.me/mahjong-gacor" rel="nofollow noreferrer" class="register">DAFTAR 🔥</a>
-                    <a href=""https://jali.me/mahjong-gacor" rel="nofollow noreferrer" class="login">LOGIN 💸</a>
+                    <a href="https://jali.me/mahjong-gacor" rel="nofollow noreferrer" class="register">DAFTAR 🔥</a>
+                    <a href="https://jali.me/mahjong-gacor" rel="nofollow noreferrer" class="login">LOGIN 💸</a>
                   </div>
                 </div>
               </div>
