--- a/ikut-turnamen-mahjong-online-hadial-berlimpah-kecoaslot-modal-5-ribu.html
+++ b/ikut-turnamen-mahjong-online-hadial-berlimpah-kecoaslot-modal-5-ribu.html
@@ -1217,8 +1217,8 @@
                     <img width='1280' height='720' layout='responsive' class="pdp-mod-common-image gallery-preview-panel__image" alt="Kecoaslot" src="https://i.postimg.cc/mrrrhgZC/093f5f3eea87b09ff3e4516b6f1bf740.jpg" />
                   </div>
                   <div class="btn-gacor">
-                    <a href="https://jali.me/mahjong-gacor" rel="nofollow noreferrer" class="register">DAFTAR 🔥</a>
-                    <a href="https://jali.me/mahjong-gacor" rel="nofollow noreferrer" class="login">LOGIN 💸</a>
+                    <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noreferrer" class="register">DAFTAR 🔥</a>
+                    <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noreferrer" class="login">LOGIN 💸</a>
                   </div>
                 </div>
               </div>
@@ -1780,11 +1780,11 @@
     </div>
     <style>.fixed-footer{display:flex;justify-content:space-around;position:fixed;background:linear-gradient(to bottom,#000000 0%,#000000 50%,#000000 100%);padding:5px 0;box-shadow:0 0 8px 4px #000;left:0;right:0;bottom:0;z-index:99}.fixed-footer a{flex-basis:calc((100% - 15px*6)/ 5);text-decoration:none;display:flex;flex-direction:column;justify-content:center;align-items:center;color:#fff;max-width:75px;font-size:12px;font-family:Ubuntu,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol"}.fixed-footer a:hover{font-weight:700}.fixed-footer .center{transform:scale(1.5) translateY(-5px);background:center no-repeat;background-size:contain;background-color:inherit;border-radius:50%}.fixed-footer img{max-width:20px;margin-bottom:0;max-height:20px}</style>
     <div class="fixed-footer">
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://image-resource77.cloud/uploads/bomjitu/icon-8.png" alt="PROMO">Bonus</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://image-resource77.cloud/uploads/bomjitu/iconin.png" alt="LOGIN">Login</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank" class="tada"><img layout="intrinsic" height="20px" width="20px" src="https://image-resource77.cloud/uploads/bomjitu/iconin.png" alt="DAFTAR">Daftar</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://image-resource77.cloud/uploads/bomjitu/iconwa.png" alt="LINK">Link</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank" class="js_live_chat_link live-chat-link"><img class="live-chat-icon" layout="intrinsic" height="20px" width="20px" src="https://image-resource77.cloud/uploads/bomjitu/iconchat.png" alt="CHAT"> Live Chat </a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://image-resource77.cloud/uploads/bomjitu/icon-8.png" alt="PROMO">Bonus</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://image-resource77.cloud/uploads/bomjitu/iconin.png" alt="LOGIN">Login</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank" class="tada"><img layout="intrinsic" height="20px" width="20px" src="https://image-resource77.cloud/uploads/bomjitu/iconin.png" alt="DAFTAR">Daftar</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://image-resource77.cloud/uploads/bomjitu/iconwa.png" alt="LINK">Link</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank" class="js_live_chat_link live-chat-link"><img class="live-chat-icon" layout="intrinsic" height="20px" width="20px" src="https://image-resource77.cloud/uploads/bomjitu/iconchat.png" alt="CHAT"> Live Chat </a>
     </div>
     <script>
       (function() {
