--- a/mahjong-di-kecoaslot-bikin-netizen-terkejut-karena-perkalian-tak-disangka.html
+++ b/mahjong-di-kecoaslot-bikin-netizen-terkejut-karena-perkalian-tak-disangka.html
@@ -786,10 +786,10 @@ body {
                     </div>
                   </div>
                   <div class="top-links-item grey" id="anonLogin">
-                    <a class="grey" href="https://jali.me/mahjong-gacor" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d5">LOGIN</a>
+                    <a class="grey" href="https://heylink.me/mahjong-gacor-ks" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d5">LOGIN</a>
                   </div>
                   <div class="top-links-item grey" id="anonSignup">
-                    <a class="grey" href="https://jali.me/mahjong-gacor" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d6">DAFTAR</a>
+                    <a class="grey" href="https://heylink.me/mahjong-gacor-ks" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d6">DAFTAR</a>
                   </div>
                   <div class="top-links-item top-links-item-hidden" id="topActionUserAccont" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d7">
                     <span id="myAccountTrigger" class="grey"></span>
@@ -1381,8 +1381,8 @@ body {
                     <img width='1280' height='720' layout='responsive' class="pdp-mod-common-image gallery-preview-panel__image" alt="Kecoaslot" src="https://i.postimg.cc/y6XF73Wt/74490de682bb504bc8a4d6333780f174.jpg" />
                   </div>
                   <div class="btn-gacor">
-                    <a href="https://jali.me/mahjong-gacor" rel="nofollow noreferrer" class="register">DAFTAR 🔥</a>
-                    <a href="https://jali.me/mahjong-gacor" rel="nofollow noreferrer" class="login">LOGIN 💸</a>
+                    <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noreferrer" class="register">DAFTAR 🔥</a>
+                    <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noreferrer" class="login">LOGIN 💸</a>
                   </div>
                 </div>
               </div>
@@ -1987,11 +1987,11 @@ body {
 </style>
 
     <div class="fixed-footer">
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="PROMO">Bonus</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="LOGIN">Login</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank" class="tada"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="DAFTAR">Daftar</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="LINK">Link</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank" class="js_live_chat_link live-chat-link"><img class="live-chat-icon" layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="CHAT"> Live Chat </a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="PROMO">Bonus</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="LOGIN">Login</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank" class="tada"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="DAFTAR">Daftar</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="LINK">Link</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank" class="js_live_chat_link live-chat-link"><img class="live-chat-icon" layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="CHAT"> Live Chat </a>
     </div>
     <script>
       (function() {
