--- a/siapa-sangka-mahjong-kasih-kejutan-cuan-kecoaslot-cuma-5rb.html
+++ b/siapa-sangka-mahjong-kasih-kejutan-cuan-kecoaslot-cuma-5rb.html
@@ -615,10 +615,10 @@
                     </div>
                   </div>
                   <div class="top-links-item grey" id="anonLogin">
-                    <a class="grey" href="https://jali.me/mahjong-gacor" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d5">LOGIN</a>
+                    <a class="grey" href="https://heylink.me/mahjong-gacor-ks" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d5">LOGIN</a>
                   </div>
                   <div class="top-links-item grey" id="anonSignup">
-                    <a class="grey" href="https://jali.me/mahjong-gacor" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d6">DAFTAR</a>
+                    <a class="grey" href="https://heylink.me/mahjong-gacor-ks" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d6">DAFTAR</a>
                   </div>
                   <div class="top-links-item top-links-item-hidden" id="topActionUserAccont" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d7">
                     <span id="myAccountTrigger" class="grey"></span>
@@ -1208,8 +1208,8 @@
                     <img width='1280' height='720' layout='responsive' class="pdp-mod-common-image gallery-preview-panel__image" alt="Kecoaslot" src="https://i.postimg.cc/t47xMj8q/photo-2024-11-27-01-02-12.jpg" />
                   </div>
                   <div class="btn-gacor">
-                    <a href="https://jali.me/mahjong-gacor" rel="nofollow noreferrer" class="register">DAFTAR 🔥</a>
-                    <a href="https://jali.me/mahjong-gacor" rel="nofollow noreferrer" class="login">LOGIN 💸</a>
+                    <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noreferrer" class="register">DAFTAR 🔥</a>
+                    <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noreferrer" class="login">LOGIN 💸</a>
                   </div>
                 </div>
               </div>
@@ -1759,11 +1759,11 @@
     </div>
     <style>.fixed-footer{display:flex;justify-content:space-around;position:fixed;background:linear-gradient(to bottom,#191919 0%,#191919 50%,#191919 100%);padding:5px 0;box-shadow:0 0 8px 4px #000;left:0;right:0;bottom:0;z-index:99}.fixed-footer a{flex-basis:calc((100% - 15px*6)/ 5);text-decoration:none;display:flex;flex-direction:column;justify-content:center;align-items:center;color:#fff;max-width:75px;font-size:12px;font-family:Ubuntu,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol"}.fixed-footer a:hover{font-weight:700}.fixed-footer .center{transform:scale(1.5) translateY(-5px);background:center no-repeat;background-size:contain;background-color:inherit;border-radius:50%}.fixed-footer img{max-width:20px;margin-bottom:0;max-height:20px}</style>
     <div class="fixed-footer">
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="PROMO">Bonus</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="LOGIN">Login</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank" class="tada"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="DAFTAR">Daftar</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="LINK">Link</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank" class="js_live_chat_link live-chat-link"><img class="live-chat-icon" layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="CHAT"> Live Chat </a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="PROMO">Bonus</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="LOGIN">Login</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank" class="tada"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="DAFTAR">Daftar</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="LINK">Link</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank" class="js_live_chat_link live-chat-link"><img class="live-chat-icon" layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="CHAT"> Live Chat </a>
     </div>
     <script>
       (function() {
